base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: ClusterIP
  selector:
    name: web-service
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 80
